--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
   <footer>
-    <p>&copy; 2023 Sign Language Dictionary. All rights reserved.</p>
+    <p>&copy;2025 Қазақ ым-ишара тілі сөздігі. Барлық құқықтар қорғалған.</p>
   </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
