--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -352,26 +352,16 @@
   
   @media (max-width: 768px) {
     main {
-      padding: 0 1rem;
+      padding: 0 0.2rem;
     }
-    
-    .replies {
-      margin-left: 1.5rem;
-      padding-left: 1.5rem;
-    }
-    
-    .comment-header {
-      flex-wrap: wrap;
-    }
-    
-    .time {
+    .comment-form, .reply-form, .comment {
+      padding: 1rem;
       width: 100%;
-      margin-top: 6px;
-      padding-left: 63px;
+      box-sizing: border-box;
     }
-    
-    .comment-form, .reply-form {
-      padding: 1.5rem;
+    .replies {
+      margin-left: 0.5rem;
+      padding-left: 0.5rem;
     }
   }
   
@@ -514,7 +504,7 @@
     }
   }
   
-  // Smooth scroll to comment form if URL has hash
+  
   document.addEventListener('DOMContentLoaded', () => {
     if (window.location.hash) {
       const element = document.getElementById(window.location.hash.substring(1));
@@ -530,7 +520,7 @@
     }
   });
   
-  // Highlight animation for new comments
+  
   if (window.location.hash) {
     const comment = document.getElementById(window.location.hash.substring(1));
     if (comment) {
