--- a/views/index.ejs
+++ b/views/index.ejs
@@ -165,10 +165,11 @@
     <h1>Kazakh Sign Language сөздігіне қош келдіңіз!</h1>
     <p>Бейне сөздігімізбен ым тілін үйреніңіз. Сөздерді іздеңіз, категорияларды шолыңыз және форумға қосылыңыз.</p>
 
-    <div class="search">
+    <div class="search" style="display: flex; align-items: center;">
       <input type="text" id="searchInput" placeholder="Сөзді теріңіз..." />
-      <button id="searchButton" style="margin-left:8px;">Іздеу</button>
+      <button id="searchButton" style="margin-left:8px; background-color: #002137;">Іздеу</button>
     </div>
+
     <div id="resultsContainer" class="video-grid"></div>
   </section>
 
