--- a/views/map.ejs
+++ b/views/map.ejs
@@ -705,7 +705,7 @@
       {
         name: "Италия",
         coords: [41.8719, 12.5674],
-        videoUrl: "https://your-cloud-storage.com/path/to/italy.MOV",
+        videoUrl: "https://storage.googleapis.com/kazsign/country/italy.MOV",
         description: "Өнері, тарихы және дәмді асханасымен әйгілі Еуропа елі"
       },
       {
